Fixed cropped hero image

--- a/styles.css
+++ b/styles.css
@@ -1138,6 +1138,9 @@ section.blue {
         overflow: hidden;
         font-size: 16px;
     }
+    .ui-people-box .flex-box-image img {
+        object-fit: cover
+    }
     .hamburger-menu-footer {
         flex-direction: column;
         gap: 10px;
